--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="assets/Cyber_Logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Resume-Based Cybersecurity Portfolio</title>
+    <title>Ayoub Bendraou - Cybersecurity Portfolio</title>
   </head>
   <body>
     <div id="root"></div>
